 * Incorrect minimum size of welcome widget (231939)
 * Hangs while ripping AudioCD with data tracks (231174)
 * Crash when auto-removing non-existing files from a project before the burning (236005)
 * Empty Blu-ray medium not detected properly (236069)
 * eMovix project cannot be burned (236823)
 * M3U playlist not read properly (237654)

2.0-rc2 (1.91)
==============
Bugfixes:
 * Added missing translation files for libk3b, libk3bdevice and K3bSetup

2.0-rc1 (1.90)
==============
Changes:
 * K3bSetup ported to KAuth framework

Bugfixes:
 * Crash on start of Audio Ripping Dialog (226595)
 * Incorrect ordering of files added to Audio Project (224649)
 * Too wide Image Burn Dialog when file path was long (225735)
 * Crash when creating image files for AudioCD project (219500)
 * Crash when manipulating VCD project items (227855)
 * Mixed-up metadata in files created with external encoder (227927)
 * Cannot edit time values in "Split Audio Track" and "Edit Audio Track" dialogs (229042)
 * Empty Blu-ray medium not detected properly (227339, 229039)
 * Crash during splitting/editing audio tracks
 * Entry fields doesn't work in burn window when "Only Create Image" option is checked (220970)
 * Layout issues in settings window (227733)

2.0-beta1 (1.70)
================
Changes:
 * Added Blu-ray support
 * Added "Options" button to file browser toolbar with view options menu (e.g. "Show Hidden Files") (196992)
 * Image and project files can be opened directly from K3b file browser
 * Using Oxygen icons (many thanks for Oxygen Team!)

Bugfixes:
 * Fixed visual glitch when panes are in "locked" state. Patch by Craig Drummond <craig@kde.org>
 * Fixed hang up when "Create Image" option is checked (217301)
 * "Hide main window while writing" option is working again
 * "Show OSD progress" option is working again
 * Improved message when ISO with incorrect size is detected (216812)