@@ -33,6 +33,8 @@ Bugfixes:
  * Empty Blu-ray medium not detected properly (236069)
  * eMovix project cannot be burned (236823)
  * M3U playlist not read properly (237654)
+ * K3b overwrites iso ignoring user choice on dvd copy with option "only create image" checked (185251)
+ * Compilation fails with FFmpeg version SVN-r23001 (236036)
 
 2.0-rc2 (1.91)
 ==============
